[package]
name = "orga"
version = "0.1.0"
authors = ["Matt Bell <mappum@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1.8"
abci2 = { git = "https://github.com/nomic-io/abci2", optional = true }
byteorder = "1.3.2"
merk = { git = " https://github.com/nomic-io/merk", rev="114f5a2415bb2ce5e51501d4eb2a56e5726708a6", optional = true }
tendermint-rpc = { version = "0.18.1", features = ["http-client"], optional = true }
tendermint = { version = "0.18.1", optional = true }
orga-macros = { path = "macros" }
seq-macro = "0.1.4"
log = "0.4.8"
blocking = "0.4.7"
ed = "0.1.5"

[features]
abci = ["abci2", "tendermint", "tendermint-rpc"]

[[example]]
name = "counter"
required-features = ["abci"]

[[example]]
name = "merk_counter"
required-features = ["abci", "merk"]

